--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Open-source (GIT!) blog about R&D in Software Development and Architecture
-description: Collaborative notes and articles on Development, Big Data, Architecture, R&D and Management which you can evolve and make better.
+description: Collaborative notes and articles on Development, Big Data, Architecture, R&D and Management which you can evolve and make better
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
 markdown: redcarpet
