--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,4 @@ google_analytics: 'UA-XXXXXXXX-X'
 # Details for the RSS feed generator
 url:            'http://rndblog.github.io'
 author:         'R&D Blog'
+bio:		'Open-source notes and articles on High Load, Big Data, Java, Architecture and Management'
