--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Open-source blog about R&D in Software Development and Architecture
+name: Open-source blog about Software Development and Architecture
 description: Join collaborative notes and articles on Development, Big Data, Architecture, R&D and Management which you can evolve and make better
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
