--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Open-source blog about Software Development and Architecture
-description: Join collaborative notes and articles on Development, Big Data, Architecture, R&D and Management which you can evolve and make better
+description: Now you can make better existing posts about Development, Big Data, Architecture, R&D and Management or create your own.
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
 markdown: redcarpet
