--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ meta_description: "Open-source notes and articles on High Load, Big Data, Java, 
 markdown: redcarpet
 highlighter: pygments
 logo: false
+cover: true
 paginate: 15
 baseurl: /
 domain_name: 'http://rndblog.github.io'
