--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Open-source blog about Software Development and Architecture
+name: Open-source R&D blog
 description: Now you can make better existing posts about Development, Big Data, Architecture, R&D and Management or create your own.
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
