--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Open-source R&D blog
-description: Now you can make better existing posts about Development, Big Data, Architecture, R&D and Management or create your own.
+name: Open R&D blog
+description: Now you can improve not only your posts. All about Software Development, Big Data, Architecture and Management
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
 markdown: redcarpet
