--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Software R&D blog
-description: Now you can improve our posts.
+description: Now you can improve our posts
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
 markdown: redcarpet
