--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: "Open-source notes and articles on High Load, Big Data, Java, 
 markdown: redcarpet
 highlighter: pygments
 logo: false
-cover: true
+cover: false
 paginate: 15
 baseurl: /
 disqus_shortname: rndblog-github
