TOC support added

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Software R&D blog
 description: Now you can improve our posts
 meta_description: "Open-source notes and articles on High Load, Big Data, Java, Architecture and Management"
 
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 logo: false
 cover: true
