Fixed edit condition + license moved to settings

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,5 @@ bio:		'Open-source notes and articles on High Load, Big Data, Java, Architecture
 
 # Details for the RSS feed generator
 url:            'http://rndblog.github.io'
+license: '<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Greative Commons License, BY-NC-SA</a>'
+editable: true
